# TIGAS

./: .gitignore  README.md  TIGAS Implementation Blueprint.md  TIGAS Rejection.txt  blueprint.md  environment.yaml  pyproject.toml  render_websplat_frames.py  requirements.txt  smoke_test_video_pipeline.py  tigas_video_pipeline.py
.github/: copilot-instructions.md
.github/workflows/: ablation-matrix.yml  ci.yml
abr_profiles/: bola.json  robustmpc.json  throughput.json
assets/: sample_cube_ascii.ply
client/: app.js  index.html
docker/: client.Dockerfile  compose.ablation.yml  encoder.Dockerfile  orchestrator.Dockerfile  predictor.Dockerfile  renderer.Dockerfile
docs/: ABLATION_WORKFLOW.md  ARCHITECTURE.md  DATAFLOW.md  MODULE_IO_CONTRACTS.md  REENTRY.md  blueprint.md
evaluation/: __init__.py  extract_sei.py  validate_frame_alignment.py  validate_sei_mapping.py  vmaf_eval.py
movement_traces/: Circular.json  Linear.json  Random.json
native/renderer_encoder/: CMakeLists.txt
native/renderer_encoder/include/: tigas_cuda_renderer.hpp  tigas_encoder.hpp  tigas_renderer.hpp  tigas_trace.hpp
native/renderer_encoder/src/: main.cpp  tigas_cuda_renderer.cu  tigas_cuda_stub.cpp  tigas_encoder.cpp  tigas_renderer.cpp  tigas_trace.cpp
network_traces/: lte.csv  lte_cascading.csv  lte_steps.csv
schemas/: metrics_event.schema.json  movement_trace.schema.json  uplink_datagram.schema.json
scripts/: attach_ebpf.sh  generate_dev_cert.sh  headless_client.py  launch_quic_chrome.sh  mode_common.py  network_shaper.py  package_dash.py  run_abr_comparison.sh  run_basic_mode.py  run_evaluation_sweep.sh  run_full_stack_test_mode.py  run_headless_ablation.sh  run_interactive.sh  run_test_mode.py  shape_network.sh
server/: go.mod
server/cmd/tigas-server/: main.go
src/tigas/: __init__.py
src/tigas/client/: __init__.py  super_resolution.py  web_bridge.py
src/tigas/evaluation/: __init__.py  evaluator.py  metrics.py  run_evaluation.py
src/tigas/input_control/: __init__.py  headless_replayer.py  interactive_mode.py  protocol.py
src/tigas/instrumentation/: __init__.py  ebpf_hooks.py  metrics_adapter.py  tc_profiles.py
src/tigas/intelligence/: __init__.py  abr_client.py  abr_server.py  predictor_base.py  predictor_kalman.py  predictor_noop.py
src/tigas/media/: __init__.py  cmaf_packager.py  coder_interface.py  encoder_av1_nvenc.py  encoder_h264_nvenc.py  encoder_libx264.py  encoder_videotoolbox.py  priority.py
src/tigas/orchestration/: __init__.py  ablation_runner.py  pipeline.py  registry.py  run_headless.py
src/tigas/renderer/: __init__.py  backend_cpu.py  backend_gsplat.py  backend_webgpu.py  interface.py  lod_manager.py  supersplat_loader.py
src/tigas/shared/: __init__.py  config.py  lifecycle.py  types.py
src/tigas/transport/: __init__.py  moq_publisher.py  quic_uplink.py  session.py
tests/: test_ablation_runner_smoke.py  test_abr_profiles.py  test_contracts.py  test_headless_replayer.py  test_media_contract.py  test_predictor_contract.py  test_renderer_contract.py  test_standard_loader.py  test_supersplat_loader.py  test_vmaf_eval.py
web/: README.md  index.html
web/src/: decoder.ts  main.ts  moq_client.ts  pose_capture.ts  super_resolution.ts  uplink_datagram.ts
